Fix alignment in chrome menu popup

--- a/browserpopup.less
+++ b/browserpopup.less
@@ -65,8 +65,15 @@ body {
 		overflow-y: auto;
 		overflow-x: hidden;
 		width: 25.5em;
+		text-align: center;
+
 		tr {
 			width: 100%;
+			display: block;
+
+			td {
+				text-align: left;
+			}
 		}
 	}
 }
